--- a/news.html
+++ b/news.html
@@ -187,7 +187,7 @@
                                         <li><a href="Sports-and-Games.html">SPORTS AND GAMES</a></li>
                                         <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
                                         <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
-                                        <li><a href="news.html">NEWS AND EVENTS</a></li>
+                                        <li class="active"><a href="news.html">NEWS AND EVENTS</a></li>
                                         <!--li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li-->
                                     </ul>
                                 </li>
@@ -233,6 +233,8 @@
         </header>
         <!-- /header -->
         
+        <br>
+
         <!-- Content wrapper -->
         <section class="blog-listing">
                 <div class="container">
