--- a/College-Directors.html
+++ b/College-Directors.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <nav>
+     
             <div class="navbar navbar-inverse navbar-custom" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
@@ -135,22 +135,19 @@
                                     </li>
 
                                     <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
-                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a>
+                                    <li class="active"><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Physical-Facilities.html">Physical Facilities</a></li>
-                                            <li><a href="BRIEF-HISTORY.html">1</a></li>
-                                            <li><a href="Chronoloy-College-History.html">2</a></li>
-                                            <li><a href="The-Coat-of-Arms.html">2</a></li>
-                                            <li><a href="College-Directors.html">t</a></li>
+                                            <li><a href="Physical-Facilities.html">PHYSICAL FACILITIES</a></li>
+                                            <li><a href="School-Layout-Plan.html">COLLEGE LAYOUT</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
                                     <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
-                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
+                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O THE DE LA SALLE  BROTHERS</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
                                     
                                 </ul>
@@ -161,8 +158,9 @@
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
                                     <li><a href="directors_message.html">PRINCIPAL</a></li>
-                                    <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
+                                    <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
+                                    <li><a href="student_corner.html">STUDENTS CORNER</a></li>
                                 </ul>
                             </li>
 
@@ -170,27 +168,27 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grade 5 Scholarships</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li>
+                                    <li>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">GRADE 5</a>
+                                        <ul>
+                                            <!--li><a href="Under_Construction.html">admissions</a></li-->
                                             <!--li><a href="#">IT</a></li-->
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
+                                    <li>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li>
+                                        <ul>
+                                            <!--li><a href="Under_Construction.html">admissions</a></li-->
                                         </ul>
                                     </li>
-                                        <li class="dropdown-submenu">
+                                        <li>
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="Under_Construction.html">admissions</a></li>
+                                            <ul>
+                                                <!--li><a href="Under_Construction.html">admissions</a></li-->
                                             </ul>
                                     </li>
                                     <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
-                                    <li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li>
+                                    <!--li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li-->
                                     <!--li><a href="#">More</a></li-->
                                     <li><a href="Under_Construction.html">NON ACADEMIC</a></li>
 
@@ -208,10 +206,10 @@
                             <!--li>
                                 <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="obu.html">Overview</a></li>
-                                    <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
-                                    <li><a href="Under_Construction.html">Coming soon</a></li>
-                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="obu.html">OVERVIEW</a></li>
+                                    <li><a href="Old-Boys-Union.html">OBU INTRODUCTION</a></li>
+                                    <li><a href="OBU-Constitution.html">OBU CONSTITUTION</a></li>
+                                    <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
@@ -222,11 +220,11 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
-                                    <li><a href="Sports-and-Games.html">Sports & Games</a></li>
+                                    <li><a href="Sports-and-Games.html">SPORTS AND GAMES</a></li>
                                     <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
-                                    <li><a href="announcements.html">Announcements</a></li>
-                                    <li><a href="view-events.html">News & Events</a></li>
-                                    <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
+                                    <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
+                                    <li><a href="news.html">NEWS AND EVENTS</a></li>
+                                    <!--li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li-->
                                 </ul>
                             </li>
                             <!--li>
@@ -244,8 +242,8 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li-->
-                            <li><a href="gallery.html">GALLERY</a></li>
-                            <li>
+                            <!--li><a href="gallery.html">GALLERY</a></li-->
+                            <!--li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
@@ -259,8 +257,9 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="contact-us.html">CONTACT US</a></li>
+                            </li-->
+                            <!--li><a href="contact-us.html">CONTACT US</a></li-->
+                            <li><a href="gallery.html">GALLERY</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
