--- a/college-anthem.html
+++ b/college-anthem.html
@@ -383,7 +383,7 @@ body {
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m. <br>
                     <br>
                     <section>
-                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls">
+                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls" autoplay="true">
                                     <source type="audio/mpeg" src="01 College Anthem Voice (3) (1).mp3" />
                                 </audio>	
           
