--- a/college-anthem.html
+++ b/college-anthem.html
@@ -383,8 +383,8 @@ body {
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m. <br>
                     <br>
                     <section>
-                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls" autoplay="true">
-                                    <source type="audio/mpeg" src="01 College Anthem Voice (3) (1).mp3" />
+                                <audio id="audio" preload="none" style="width: 100%;" autoplay controls>
+                                    <source type="audio/mp3" src="01 College Anthem Voice (3) (1).mp3"/>
                                 </audio>	
           
     </section>
