--- a/college-anthem.html
+++ b/college-anthem.html
@@ -383,7 +383,7 @@ body {
                     Music by 	–		S. Norbert Rodrigo,  a.v.c.m. <br>
                     <br>
                     <section>
-                                <audio id="audio" preload="none" style="width: 100%;" autoplay controls>
+                                <audio id="audio" preload="none" style="width: 100%;" autoplay controls allow="autoplay">
                                     <source type="audio/mp3" src="01 College Anthem Voice (3) (1).mp3"/>
                                 </audio>	
           
