--- a/blog1.html
+++ b/blog1.html
@@ -52,7 +52,7 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="img/DLSC_Logo_1x1_small.png" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <nav>
+        
                 <div class="navbar navbar-inverse navbar-custom" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
