--- a/Activities-in-Development-Stage.html
+++ b/Activities-in-Development-Stage.html
@@ -331,8 +331,8 @@ font-weight: bold;
 color: #294;
 }
 
-.shadow1 { 
-box-shadow: 0 5px 10px rgba(154, 160, 185, 0.219), 0 15px 40px rgba(166, 173, 201, 0.274);
+.shadow1 {
+    box-shadow: 0px -20px 10px rgb(154 160 185 / 22%), 0px -20px 20px rgb(166 173 201 / 27%);
 }
 
 .shadow2 { 
