--- a/blog2.html
+++ b/blog2.html
@@ -551,6 +551,12 @@ body {
           <h2>Media</h2>
         
         <div class="content">
+            <div>
+                <a href="#" target="_blank">
+                <img src="img/Media Unit/DLS Media Unit-footerimage.png" height="0px" width="auto" class="img-responsive">
+                </a>
+              </div>
+              <br>
           <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
       <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
       <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
