--- a/blog2.html
+++ b/blog2.html
@@ -553,7 +553,7 @@ body {
         <div class="content">
             <div>
                 <a href="#" target="_blank">
-                <img src="img/Media Unit/DLS Media Unit-footerimage.png" height="0px" width="auto" class="img-responsive">
+                <img src="img/Media Unit/DLS Media Unit-footerimage.png" height="60px" width="20px" class="img-responsive">
                 </a>
               </div>
               <br>
