--- a/blog2.html
+++ b/blog2.html
@@ -583,7 +583,7 @@ margin-right:5px;
 
 /*********************donate_home****************/
 #donate_home {
-    background-image: url(../img/14.jpg);
+    background-image: url(img/Media\ Unit/DLS Media UnitDLS Media UnitS.jpg);
     background-attachment: fixed;
 }
 
