--- a/blog2.html
+++ b/blog2.html
@@ -583,8 +583,10 @@ margin-right:5px;
 
 /*********************donate_home****************/
 #donate_home {
-    background-image: url(img/Media\ Unit/DLS Media UnitDLS Media UnitS.jpg);
-    background-attachment: fixed;
+    background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Media%20Unit/DLS%20Media%20UnitDLS%20Media%20UnitS.jpg);
+    background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .donate_hm {
