--- a/blog2.html
+++ b/blog2.html
@@ -584,10 +584,11 @@ margin-right:5px;
 /*********************donate_home****************/
 #donate_home {
     background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Media%20Unit/DLS%20Media%20UnitDLS%20Media%20UnitS.jpg);
-    background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+    no-repealt bottom center fixed !important;
+    background-attachment: fixed;
+    background-size: cover;
 }
+
 
 .donate_hm {
     padding-top: 150px;
@@ -1208,15 +1209,14 @@ padding-bottom:20px;
              </div>
             </div>
            </section>
-           
            <section id="donate_home">
             <div class="donate_hm clearfix">
              <div class="container">
               <div class="row">
                <div class="donate_h1 text-center clearfix">
                 <div class="col-sm-12">
-                  <h2 class="mgt col">No one has ever become poor by giving</h2>
-                  <p class="col">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
+                  <h2 class="mgt col" id="h2" style="text-decoration: mintcream;">No one has ever become poor by giving</h2>
+                  <p class="col" style="text-decoration: white;">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
                   <h5><a class="button" href="#">Donate Now!</a></h5>
                 </div>
                </div>
