--- a/blog2.html
+++ b/blog2.html
@@ -779,6 +779,8 @@ padding-bottom:20px;
   }
  }
 
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
  </style>
             </section>
             <section id="center" class="clearfix center_home">
@@ -1215,9 +1217,9 @@ padding-bottom:20px;
               <div class="row">
                <div class="donate_h1 text-center clearfix">
                 <div class="col-sm-12">
-                  <h2 class="mgt col" id="h2" style="text-decoration: mintcream;">No one has ever become poor by giving</h2>
-                  <p class="col" style="text-decoration: white;">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
-                  <h5><a class="button" href="#">Donate Now!</a></h5>
+                  <h2 class="mgt col" id="h2" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 700;">De La Salle College</h2>
+                  <p class="col" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
+                  <h5><a class="button" href="#">About College</a></h5>
                 </div>
                </div>
               </div>
