--- a/blog2.html
+++ b/blog2.html
@@ -296,6 +296,7 @@ width:100%;
 .progress_1i{
  background:#fff;
  padding:40px 15px; 
+ border-radius: 1rem;
   }
 .progress_1i span i{
  background: #d43c18;
@@ -527,6 +528,7 @@ margin-top:20px;
  text-align:center;
  background:#fff;
  padding:0px 10px 20px 10px;
+ border-radius: 1rem;
  }
 .event_h1li1l hr{
   border-width:3px;
@@ -578,6 +580,7 @@ margin-right:5px;
  padding:40px 20px;
  margin-left:15px;
  margin-right:15px; 
+ border-radius: 1rem;
   }
 /*********************event_home_end****************/
 
@@ -781,6 +784,33 @@ padding-bottom:20px;
 
  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
+ .button{
+background:#ffc400;
+display:inline-block;
+color:#fff;
+padding:15px 30px!important;
+margin-top:10px;
+border-radius:30px;
+  }
+.button:hover{
+color:#fff;
+background:#000!important;
+  }
+.button_1{
+background:#000;
+display:inline-block;
+color:#fff;
+padding:15px 30px;
+margin-top:10px;
+border-radius:30px;
+  }
+.button_1:hover{
+color:#fff;
+background:#d43c18;
+  }
+.border_none{
+  border:none!important;
+  }
  </style>
             </section>
             <section id="center" class="clearfix center_home">
@@ -1182,15 +1212,16 @@ padding-bottom:20px;
                          <div id="home" class="tab-pane fade in active clearfix">
                             <div class="click clearfix">
                              <div class="home_i col-sm-12 clearfix">
-                              <h4 class="mgt bold">Hooray!</h4>
-                              <p>Aras nec imperdiet neque. Vestibulum sem libero, ultrices sit amet elit at, aliquet accumsan purus. Suspendisse interdum felis at odio molestie, at elementum nisi dictum. Donec ac ultricies nisl. Nam posuere accumsan diam, vel mattis nibh volutpat hendrerit. Curabitur ultrices auctor nisl, vel ultricies massa euismod sed. Etiam at imperdiet nulla.</p>
+                              <h4 class="mgt bold">Available Events</h4>
+                              <p>None</p>
                              </div>
                             </div>
                          </div>
                          <div id="menu1" class="tab-pane fade clearfix">
                             <div class="click clearfix">
                               <div class="home_i col-sm-12 clearfix">
-                              <h4 class="mgt bold">Jobs for disabled people</h4>
+                              <h4 class="mgt bold">“INDIVISA MANENT”</h4>
+                              <img src="img/DLSC_Logo_1x1_small.png" style="align-items: center; height: 50px; width: auto;">
                               <p>Etiam eu molestie eros, commodo hendrerit sapien. Maecenas tempus leo ac nisi iaculis porta. Sed sapien tortor, aliquet a velit ut, lacinia molestie velit. Maecenas ornare consequat massa ullamcorper dapibus. Aliquam auctor, sapien sit amet accumsan facilisis, enim enim aliquet arcu, tincidunt pellentesque justo turpis id neque. Duis eleifend nunc sit amet mi dapibus ornare. Suspendisse vel libero sem.</p>
                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices ipsum non mattis pharetra. Integer laoreet non felis sit amet pharetra. Integer mollis eget felis non finibus.</p>
                              </div>
@@ -1200,7 +1231,7 @@ padding-bottom:20px;
                          <div id="menu2" class="tab-pane fade clearfix">
                             <div class="click clearfix">
                               <div class="home_i col-sm-12 clearfix">
-                               <video src="vid/DLS-INTRO-HD.mp4" height="230px" width="auto" controls class="iw" alt="abc"></video>
+                               <video src="vid/DLS-INTRO-HD.mp4" height="204px" width="auto" controls class="iw" alt="abc"></video>
                             </div>
                          </div>
                        </div>
@@ -1219,7 +1250,7 @@ padding-bottom:20px;
                 <div class="col-sm-12">
                   <h2 class="mgt col" id="h2" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 700;">De La Salle College</h2>
                   <p class="col" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
-                  <h5><a class="button" href="#">About College</a></h5>
+                  <h5><a class="button" href="https://www.facebook.com/groups/4385030891619882/">About College</a></h5>
                 </div>
                </div>
               </div>
