--- a/blog2.html
+++ b/blog2.html
@@ -587,9 +587,9 @@ margin-right:5px;
 /*********************donate_home****************/
 #donate_home {
     background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Media%20Unit/DLS%20Media%20UnitDLS%20Media%20UnitS.jpg);
-    no-repealt bottom center fixed !important;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 123.3rem;
 }
 
 
@@ -1221,9 +1221,10 @@ background:#d43c18;
                             <div class="click clearfix">
                               <div class="home_i col-sm-12 clearfix">
                               <h4 class="mgt bold">“INDIVISA MANENT”</h4>
-                              <img src="img/DLSC_Logo_1x1_small.png" style="align-items: center; height: 50px; width: auto;">
-                              <p>Etiam eu molestie eros, commodo hendrerit sapien. Maecenas tempus leo ac nisi iaculis porta. Sed sapien tortor, aliquet a velit ut, lacinia molestie velit. Maecenas ornare consequat massa ullamcorper dapibus. Aliquam auctor, sapien sit amet accumsan facilisis, enim enim aliquet arcu, tincidunt pellentesque justo turpis id neque. Duis eleifend nunc sit amet mi dapibus ornare. Suspendisse vel libero sem.</p>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices ipsum non mattis pharetra. Integer laoreet non felis sit amet pharetra. Integer mollis eget felis non finibus.</p>
+                              <img src="College Assests/College-Items/crest-bw.jpg" style=" align-content: center; height: 200px; width: auto;">
+                              <p style="text-align: justify;">De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".</p>
+                               <p style="text-align: justify;">De La Salle College was opened on 01 st February 1905 with 22 boys on roll. The object of this School is to give the boys of the Mutwal mission an opportunity to receive an elementary English Education. It is the first “English School” to be set up in this part of Colombo North</p>
+                            
                              </div>
                        
                             </div>
@@ -1270,7 +1271,7 @@ background:#d43c18;
                <div class="col-sm-3 space_all">
                 <div class="news_home_2l clearfix">
                  <div class="news_home_2li clearfix">
-                  <a href="#"><img src="img/15.jpg" alt="abc" class="iw"></a>
+                  <a href="#"><img src="News and Events/Main-Thumbsmod.jpg" height="auto" width="400px" alt="abc" class="iw"></a>
                  </div>
                  <a href="#"><div class="news_home_2li1 clearfix"></div></a>
                 </div>
