--- a/blog2.html
+++ b/blog2.html
@@ -583,6 +583,13 @@ margin-right:5px;
  border-radius: 1rem;
   }
 /*********************event_home_end****************/
+@media (max-width: 480px) {
+        #donate_home {
+          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Media%20Unit/DLS%20Media%20UnitDLS%20Media%20Unit-Mobile-Wrapper.jpg);
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+        }
 
 /*********************donate_home****************/
 #donate_home {
