--- a/blog2.html
+++ b/blog2.html
@@ -1233,7 +1233,7 @@ background:#d43c18;
                          <div id="menu2" class="tab-pane fade clearfix">
                             <div class="click clearfix">
                               <div class="home_i col-sm-12 clearfix">
-                               <video src="vid/DLS-INTRO-HD.mp4" height="180px" width="400px" controls class="responsive-youtube-embed" alt="abc"></video>
+                                <iframe width="400" height="266" src="https://www.youtube.com/embed/videoseries?list=PLPb7KSoOA4JTxQxsEU57ouyPMFBsuDV3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
                             </div>
                          </div>
                        </div>
