--- a/blog2.html
+++ b/blog2.html
@@ -1230,10 +1230,19 @@ background:#d43c18;
                        
                             </div>
                          </div>
+                         <style>
+                             .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+                         </style>
                          <div id="menu2" class="tab-pane fade clearfix">
                             <div class="click clearfix">
                               <div class="home_i col-sm-12 clearfix">
-                                <iframe width="400" height="266" src="https://www.youtube.com/embed/videoseries?list=PLPb7KSoOA4JTxQxsEU57ouyPMFBsuDV3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                                <iframe src="https://www.youtube.com/embed/videoseries?list=PLPb7KSoOA4JTxQxsEU57ouyPMFBsuDV3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
                             </div>
                          </div>
                        </div>
