--- a/Media-Unit.html
+++ b/Media-Unit.html
@@ -1334,9 +1334,9 @@
                                  <div class="row">
                                   <div class="news_home_1 text-center clearfix">
                                    <div class="col-sm-12">
-                                     <h1 class="mgt">Latest News</h1>
+                                     <h1 class="mgt">※ Latest News ※</h1>
                                    </div>
-                                  </div>
+                            
 </body>
                 </section>
 </html>
