--- a/Media-Unit.html
+++ b/Media-Unit.html
@@ -665,7 +665,7 @@
                     #news_home{
                      padding-top:40px;
                      padding-bottom:40px;
-                     background:#f4f4f4; 
+                     //background:#f4f4f4; 
                       }
                     .news_home_2l{
                     position:relative;  
