--- a/Media-Unit.html
+++ b/Media-Unit.html
@@ -1298,6 +1298,9 @@
                         width: 100%;
                         height: 100%;
                     }
+                    iframe{
+                        padding-right: 1rem;
+                    }
                                              </style>
                                              <div id="menu2" class="tab-pane fade clearfix">
                                                 <div class="click clearfix">
