--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -902,6 +902,7 @@ body {
 	color: #111;
 	font-size: 20px;
 	font-weight: 500;
+  text-align: center;
 	letter-spacing: 1px;
 	margin: 10px 0px 5px 0px;
 }
@@ -978,10 +979,10 @@ body {
                             <div class="row">
                                 <div class="col-md-4 col-lg-4 m-15px-tb">
                                     <div class="news-grid">
-                                        <div class="news-grid-image"><img src="News and Events/Main-Thumbsmod.jpg" alt="">
+                                        <div class="news-grid-image"><img src="img/Media Unit/DLS Media Unit-modified.png" alt="">
                                             </div>
                                             <div class="news-grid-txt">
-                                              <h2>Heading Will Be Here</h2>
+                                              <h2>MEDIA UNIT</h2>
                                             </div>
                                         </div>
                                     </div>
