--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -256,7 +256,7 @@
                     
                     /*********************donate_home****************/
                     #donate_home {
-                        background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Media%20Unit/DLS%20Media%20UnitDLS%20Media%20UnitS.jpg);
+                        background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/clubs-and-societies-section.jpg);
                         background-repeat: no-repeat;
                         background-position: center;
                         background-attachment: fixed;
