--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -258,7 +258,7 @@
                     #donate_home {
                         background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/clubs-and-societies-section.jpg);
                         background-repeat: no-repeat;
-                        background-position: center;
+                        //background-position: center;
                         background-attachment: fixed;
                         background-size: 123.3rem;
                     }
