--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -308,7 +308,7 @@
                                    <div class="donate_h1 text-center clearfix">
                                     <div class="col-sm-12">
                                       <h2 class="mgt col" id="h2" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 700;">Clubs And Societies</h2>
-                                      <p class="col" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
+                                      <p class="col" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
                                       <h5><a class="button" href="https://www.facebook.com/groups/4385030891619882/">View All</a></h5>
                                     </div>
                                    </div>
