--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -257,8 +257,8 @@
                     /*********************donate_home****************/
                     #donate_home {
                         background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/clubs-and-societies-section.jpg);
-                        background-repeat: no-repeat;
-                        //background-position: center;
+                        //background-repeat: no-repeat;
+                        background-position: center;
                         background-attachment: fixed;
                         background-size: 123.3rem;
                     }
