--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -50,7 +50,7 @@
 
 <body>
     <!-- Start Your Body Code From here -->
-    <div class="wrapper">
+    <div>
         <!-- header starts here -->
         <header id="header" class="">
             <!-- header -->
