--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -259,7 +259,7 @@
                         background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/clubs-and-societies-section.jpg);
                         background-repeat: no-repeat;
                         background-position: justify;
-                        background-attachment: fixed;
+                        background-attachment: local;
                         background-size: 123.3rem;
                     }
                     
@@ -309,7 +309,7 @@
                                     <div class="col-sm-12">
                                       <h2 class="mgt col" id="h2" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 700;">Clubs And Societies</h2>
                                       <p class="col" style="color: white; font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center">Lorem ipsum dolor sit amet, consectetur cing elit. Suspe ndisse suscipit sagittis leo sit met condimentum estibulum dignissim posuere cubilia Curae; Suspendisse at consectetur massa. Curabitur non ipsum nisinec dapibus elit. Donec nec magna id lacus consequat posuere. Aenean ut diam vitae ante interdum interdum ut sit amet metus.</p>
-                                      <h5><a class="button" href="https://www.facebook.com/groups/4385030891619882/">View All</a></h5>
+                                      <h5><a class="button" href="#news_home">View All</a></h5>
                                     </div>
                                    </div>
                                   </div>
