--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -686,6 +686,36 @@ body {
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/434d359724.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+    $(document).on('click', function (e) {
+    var
+        $popover,
+        $target = $(e.target);
+
+    //do nothing if there was a click on popover content
+    if ($target.hasClass('popover') || $target.closest('.popover').length) {
+        return;
+    }
+
+    $('[data-toggle="popover"]').each(function () {
+        $popover = $(this);
+
+        if (!$popover.is(e.target) &&
+            $popover.has(e.target).length === 0 &&
+            $('.popover').has(e.target).length === 0)
+        {
+            $popover.popover('hide');
+        } else {
+            //fixes issue described above
+            $popover.popover('toggle');
+        }
+    });
+})
+
+  
+
+    </script>
     <script>
 			$(document).ready(function() {
 				var progressPath = document.querySelector('.progress-wrap path');
@@ -729,35 +759,6 @@ body {
         setTimeout(function(){
             $('.loader_bg').fadeToggle();
         }, 1500);
-    </script>
-    <script>
-    $(document).on('click', function (e) {
-    var
-        $popover,
-        $target = $(e.target);
-
-    //do nothing if there was a click on popover content
-    if ($target.hasClass('popover') || $target.closest('.popover').length) {
-        return;
-    }
-
-    $('[data-toggle="popover"]').each(function () {
-        $popover = $(this);
-
-        if (!$popover.is(e.target) &&
-            $popover.has(e.target).length === 0 &&
-            $('.popover').has(e.target).length === 0)
-        {
-            $popover.popover('hide');
-        } else {
-            //fixes issue described above
-            $popover.popover('toggle');
-        }
-    });
-})
-
-  
-
     </script>
 </body>
 
