--- a/clubs-and-societies.html
+++ b/clubs-and-societies.html
@@ -622,9 +622,10 @@ body {
         
         <div class="content">
           <ul class="menu clearfix"><li class="first leaf"><a href="History-and-Location.html" title="">History</a></li>
-      <li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
-      <li class="leaf"><a href="obu.html" title="">OBU</a></li>
-      <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
+      <li class="leaf"><a href="Organizational-Structure.html" title="">Administration</a></li>
+      <li class="leaf"><a href="admissions.html" title="">Admissions</a></li>
+      <li class="leaf"><a href="obu.html" title="">Old Boys Union</a></li>
+      <li class="leaf"><a href="clubs-and-societies.html" title="">Clubs and Societies</a></li>
       <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
       </ul>  </div>
       </div>
@@ -672,7 +673,7 @@ body {
     <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights Reserved</p>
     <div class="container">
     <div>  
-        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites.Designed and Developed by Kasun Chanuka Fernando</font></p>
+        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The website's contents are provided primarily for informational purposes. The DLS College ICT Unite maintains and updates the informations on a regular basis. We make every effort to ensure the accuracy and completeness of the material on this website, but we cannot guarantee its completeness or correctness. The information on the DLS College Official Website cannot be used to obtain certain rights. The website may contain links to third-party organizations' websites. We are not responsibility for any consequences which may occur from the use of information obtained from these websites. Designed and Developed by Kasun Chanuka Fernando</font></p>
         </div>
     </div>
             </div>
