--- a/blog2.html
+++ b/blog2.html
@@ -55,7 +55,7 @@
         <header id="header" class="">
             <!-- header -->
             <header id="header" class="">
-<nav class="light" style="background-color: rgba(var(--r-dark-blue), var(--g-dark-blue), var(--b-dark-blue), 0.8);">
+<nav class="light" style="background-color: rgba(10,40);">
    <ul style="padding: 10px 35px;">
       <li>
          <div class="nav-icons search-super">
