--- a/blog2.html
+++ b/blog2.html
@@ -65,7 +65,7 @@
          </div>
       </li>
       <li><a href="/"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
-      <li>
+        <li>
          <div class="nav-icons">
             <div class="menu-wrapper">
                <div class="hamburger-menu" data-toggle="collapse" data-target=".navbar-collapse"></div>
@@ -73,7 +73,12 @@
          </div>
       </li>
    </ul>
+   <hgroup class="site-title">
+    <h1 style="text-align: center; margin-bottom:0 ; text-decoration: none;" class="site-title">
+    <a href="index.html" title="" rel="home">DE LA SALLE COLLEGE</a></h1>
+  </hgroup>
 </nav>
+
 <div class="navbar navbar-inverse navbar-custom" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -243,6 +248,15 @@
             <section>
                 
                 <style>
+
+                     hgroup h1 span .site-title{
+    font-family: 'trajan pro';
+    text-decoration: none;
+    text-shadow: 0px 0px 1px #aaaaaa;
+    color: white;
+    font-size: 40PX;
+ 
+ }
  ol, ul {
     margin-top: 0;
     margin-bottom: 0;
