--- a/blog2.html
+++ b/blog2.html
@@ -441,21 +441,21 @@ nav:not(.rank-math-breadcrumb) ul {
 
 @media (max-width:599px) {
 	.top-crest {
-		height: 80px;
+		height: auto;
 		width: auto
 	}
 }
 
 @media (min-width:600px) and (max-width:767px) {
 	.top-crest {
-		height: 90px;
+		height: 100px;
 		width: auto
 	}
 }
 
 @media (min-width:768px) {
 	.top-crest {
-		height: 100px;
+		height: 135px;
 		width: auto
 	}
 }
