--- a/blog2.html
+++ b/blog2.html
@@ -67,9 +67,17 @@
       <li><a href="/"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="" class="top-crest" id="top-crest" style="transform: scale(0.8);"></a></li>
         <li>
          <div class="nav-icons">
-            <div class="menu-wrapper">
-               <div class="hamburger-menu" data-toggle="collapse" data-target=".navbar-collapse"></div>
-            </div>
+            <div class="navbar navbar-inverse navbar-custom" role="navigation">
+                
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+             </div>
          </div>
       </li>
    </ul>
@@ -77,6 +85,7 @@
     <h1 style="text-align: center; margin-bottom:0 ; text-decoration: none;" class="site-title">
     <a href="index.html" title="" style="text-decoration: none;"  rel="home">DE LA SALLE COLLEGE</a></h1>
   </hgroup>
+  <br>
 </nav>
 
 <div class="navbar navbar-inverse navbar-custom" role="navigation">
