--- a/blog2.html
+++ b/blog2.html
@@ -83,7 +83,7 @@
    </ul>
    <hgroup class="site-title">
     <h1 style="text-align: center; margin-bottom:0 ; text-decoration: none;" class="site-title">
-    <a href="index.html" title="" style="text-decoration: none;"  rel="home">DE LA SALLE COLLEGE</a></h1>
+    <a href="index.html" title="" style="text-decoration: none; padding-top: -54rem; "  rel="home">DE LA SALLE COLLEGE</a></h1>
   </hgroup>
   <br>
 </nav>
