--- a/blog2.html
+++ b/blog2.html
@@ -464,9 +464,12 @@ nav:not(.rank-math-breadcrumb) ul {
 
 @media (min-width:768px) {
 	.top-crest {
-		height: 160px;
-		width: auto
-	}
+    height: 160px;
+    width: auto;
+    padding-right: 5rem;
+    position: sticky;
+    align-items: center;
+}
 }
 
 .top-crest.hidden {
